[tool.poetry]
name = "scipy_cut_tree_balanced"
version = "1.2"
description = "Python function that performs a balanced cut tree of a SciPy linkage matrix"
authors = ["Vicente Reyes <vr.github@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scipy = "*"
numpy = "*"
pytest = "*"
autopep8 = "*"
pandas = "^1.5"
scikit-learn = "*"
